--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,8 +78,8 @@
 }
 .keyboard .up-panel .rightPanel {
   display: flex;
-  margin-right: 30px;
-  margin-top: 25px;
+  margin-right: 24px;
+  margin-top: 37px;
 }
 .keyboard .up-panel .rightPanel .emblem {
   display: flex;
@@ -93,21 +93,75 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* border: $bordStd; */
   width: 660px;
-  height: 225px;
-  margin: 5px auto;
+  height: 210px;
+  margin: 15px auto;
 }
 .keyboard .down-container .central-panel {
   display: flex;
+  flex-direction: column;
+  width: 516px;
+  height: 210px;
+  margin-left: -8px;
+}
+.keyboard .down-container .central-panel .block-1-Esc {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 516px;
+  height: 25px;
+}
+.keyboard .down-container .central-panel .block-1-Esc .btnClassF {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+  background-color: rgb(82, 82, 82);
   border: 1px solid grey;
-  width: 500px;
-  height: 225px;
+  border-radius: 3px;
+  padding-left: 6px;
+  width: 32.5px;
+  height: 23px;
+  margin-right: 2px;
+}
+.keyboard .down-container .central-panel .block-1-Esc .btnClassF:first-child {
+  padding-left: 1px;
+  padding-top: 2px;
+}
+.keyboard .down-container .central-panel .block-1-Esc .btnClassF:nth-child(14), .keyboard .down-container .central-panel .block-1-Esc .btnClassF:nth-child(15) {
+  font-size: 9px;
+  padding: 1px;
+}
+.keyboard .down-container .central-panel .block-1-Esc .btnClassF p {
+  font-size: 5.5pt;
+  color: rgb(98, 190, 243);
+}
+.keyboard .down-container .central-panel .block-2-Number {
+  margin-top: 2px;
+  width: 516px;
+  height: 35px;
+  border: 1px solid grey;
+}
+.keyboard .down-container .central-panel .block-3-Enter {
+  margin-top: 2px;
+  width: 516px;
+  height: 72px;
+  border: 1px solid grey;
+}
+.keyboard .down-container .central-panel .block-4-Shift {
+  margin-top: 2px;
+  width: 516px;
+  height: 35px;
+  border: 1px solid grey;
+}
+.keyboard .down-container .central-panel .block-5-Space {
+  margin-top: 2px;
+  width: 516px;
+  height: 35px;
+  border: 1px solid grey;
 }
 .keyboard .down-container .mouse-panel {
   margin-top: 20px;
+  margin-right: -8px;
   display: flex;
   flex-direction: column;
   width: 150px;
