--- a/src/css/style.css
+++ b/src/css/style.css
@@ -131,6 +131,9 @@
   font-size: 9px;
   padding: 1px;
 }
+.keyboard .down-container .central-panel .block-1-Esc .btnClassF:nth-child(14) p, .keyboard .down-container .central-panel .block-1-Esc .btnClassF:nth-child(15) p {
+  font-size: 7px;
+}
 .keyboard .down-container .central-panel .block-1-Esc .btnClassF p {
   font-size: 5.5pt;
   color: rgb(98, 190, 243);
@@ -179,10 +182,67 @@
   border: 1px solid grey;
 }
 .keyboard .down-container .central-panel .block-5-Space {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   margin-top: 2px;
   width: 516px;
   height: 35px;
+}
+.keyboard .down-container .central-panel .block-5-Space p {
+  font-size: 8pt;
+}
+.keyboard .down-container .central-panel .block-5-Space button:first-child {
+  border-radius: 3px 3px 3px 15px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:last-child {
+  border-radius: 3px 3px 15px 3px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(2) .column1 {
+  background-color: rgb(98, 190, 243);
+  padding: 2px;
+  border-radius: 3px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(2) .column1 p {
+  color: #000;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(5) {
+  width: 167.5px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(7) .column1 {
+  margin-bottom: 2px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(7) .column1 p {
+  padding: 1px;
+  display: inline-block;
+  padding-right: 1px;
+  font-size: 10px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(8) .column1 p, .keyboard .down-container .central-panel .block-5-Space button:nth-child(10) .column1 p {
+  margin-top: 2px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(9) {
+  flex-direction: column;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(9) .column1 {
+  margin-bottom: 2px;
+}
+.keyboard .down-container .central-panel .block-5-Space button:nth-child(9) .column1 p {
+  padding-right: 1px;
+  font-size: 10px;
+  display: inline;
+}
+.keyboard .down-container .central-panel .block-5-Space .btnClassStd {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(82, 82, 82);
   border: 1px solid grey;
+  border-radius: 3px;
+  width: 33.5px;
+  height: 33px;
+  margin-right: 2px;
 }
 .keyboard .down-container .mouse-panel {
   margin-top: 20px;
