--- a/src/css/style.css
+++ b/src/css/style.css
@@ -175,11 +175,95 @@
 .keyboard .down-container .central-panel .block-2-Number p {
   font-size: 9pt;
 }
-.keyboard .down-container .central-panel .block-3-Enter {
+.keyboard .down-container .central-panel .block-3 {
+  display: grid;
+  grid-template-columns: 1fr 33.5px;
+  grid-template-rows: 1fr 1fr;
+  gap: 2px;
   margin-top: 2px;
-  width: 516px;
+  width: 514px;
   height: 72px;
+}
+.keyboard .down-container .central-panel .block-3-Tab {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  grid-column: 1;
+  grid-row: 1;
+}
+.keyboard .down-container .central-panel .block-3-Tab .btnClassStd {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(82, 82, 82);
   border: 1px solid grey;
+  border-radius: 3px;
+  width: 33.5px;
+  height: 33px;
+  margin-right: 2px;
+}
+.keyboard .down-container .central-panel .block-3-CapsLock {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  grid-column: 1;
+  grid-row: 2;
+}
+.keyboard .down-container .central-panel .block-3-CapsLock .btnClassStd {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(82, 82, 82);
+  border: 1px solid grey;
+  border-radius: 3px;
+  width: 33.5px;
+  height: 33px;
+  margin-right: 2px;
+}
+.keyboard .down-container .central-panel .btnEnter {
+  display: grid;
+  grid-template-columns: 9.5px 24px;
+  grid-template-rows: 33px 1fr;
+  grid-column: 2;
+  grid-row: 1/3;
+}
+.keyboard .down-container .central-panel .btnEnter #btnEnterLU {
+  background-color: rgb(82, 82, 82);
+  border-color: grey;
+  border-width: 1px;
+  border-style: solid none solid solid;
+  border-radius: 3px 0 0 3px;
+  grid-column: 1;
+  grid-row: 1;
+}
+.keyboard .down-container .central-panel .btnEnter #btnEnterLD {
+  grid-column: 1;
+  grid-row: 2;
+}
+.keyboard .down-container .central-panel .btnEnter #btnEnterRU {
+  background-color: rgb(82, 82, 82);
+  border-color: grey;
+  border-width: 1px;
+  border-style: solid solid none none;
+  border-radius: 0 3px 0 0;
+  padding-top: 7px;
+  font-size: 9pt;
+  grid-column: 2;
+  grid-row: 1;
+}
+.keyboard .down-container .central-panel .btnEnter #btnEnterRU > p {
+  margin-left: -5px;
+}
+.keyboard .down-container .central-panel .btnEnter #btnEnterRD {
+  background-color: rgb(82, 82, 82);
+  border-color: grey;
+  border-width: 1px;
+  border-style: none solid solid solid;
+  border-radius: 0 0 3px 3px;
+  grid-column: 2;
+  grid-row: 2;
 }
 .keyboard .down-container .central-panel .block-4-Shift {
   display: flex;
