--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -213,11 +213,103 @@ $heightDownPan: 210px;
         }
       }
 
-      & .block-3-Enter {
+      & .block-3 {
+        display: grid;
+        grid-template-columns: 1fr 33.5px;
+        grid-template-rows: 1fr 1fr;
+        gap: 2px;
         margin-top: 2px;
-        width: 516px;
+        width: 514px;
         height: 72px;
-        border: $bordStd;
+      }
+
+      & .block-3-Tab {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        grid-column: 1;
+        grid-row: 1;
+
+        & .btnClassStd {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          @include btnStdBg-cBrd;
+          @include btnStnBrd-rad;
+          width: 33.5px;
+          height: 33px;
+          margin-right: 2px;
+        }
+      }
+
+      & .block-3-CapsLock {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        grid-column: 1;
+        grid-row: 2;
+
+        & .btnClassStd {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          @include btnStdBg-cBrd;
+          @include btnStnBrd-rad;
+          width: 33.5px;
+          height: 33px;
+          margin-right: 2px;
+        }
+      }
+
+      & .btnEnter {
+        display: grid;
+        grid-template-columns: 9.5px 24px;
+        grid-template-rows: 33px 1fr;
+        grid-column: 2;
+        grid-row: 1/3;
+
+        #btnEnterLU {
+          background-color: $colorGrey;
+          border-color: grey;
+          border-width: 1px;
+          border-style: solid none solid solid;
+          border-radius: 3px 0 0 3px;
+          grid-column: 1;
+          grid-row: 1;
+        }
+
+        #btnEnterLD {
+          grid-column: 1;
+          grid-row: 2;
+        }
+
+        #btnEnterRU {
+          background-color: $colorGrey;
+          border-color: grey;
+          border-width: 1px;
+          border-style: solid solid none none;
+          border-radius: 0 3px 0 0;
+          padding-top: 7px;
+          font-size: 9pt;
+          grid-column: 2;
+          grid-row: 1;
+
+          & > p {
+            margin-left: -5px;
+          }
+        }
+
+        #btnEnterRD {
+          background-color: $colorGrey;
+          border-color: grey;
+          border-width: 1px;
+          border-style: none solid solid solid;
+          border-radius: 0 0 3px 3px;
+          grid-column: 2;
+          grid-row: 2;
+        }
       }
 
       & .block-4-Shift {
