--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,41 +1,5 @@
-$colorBlack: #000;
-$colorWhite: #fff;
-$colorGrey2: rgb(146, 140, 140);
-$colorGrey: rgb(82, 82, 82);
-$colorBlue: rgb(98, 190, 243);
-$colorGreen: rgb(30, 192, 130);
-$bordStd: 1px solid $colorGrey2;
-$boxShadow: 0 0 15px 5px $colorGrey2;
-$bordRad: 30px;
-
-@mixin btnStdBg-cBrd {
-  background-color: $colorGrey;
-  border: $bordStd;
-}
-
-@mixin btnStnBrd-rad {
-  border-radius: 3px;
-}
-
-@mixin btnActive {
-  &:hover {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-}
-
-@mixin btnStd {
-  .btnClassStd {
-    display: flex;
-    flex-direction: row;
-    @include btnStdBg-cBrd;
-    @include btnStnBrd-rad;
-    @include btnActive;
-    width: 33.5px;
-    height: 33px;
-    margin-right: 2px;
-  }
-}
+@import "variable";
+@import "mixins";
 
 * {
   padding: 0;
@@ -51,6 +15,11 @@ $bordRad: 30px;
 
 .action {
   visibility: hidden;
+}
+
+#activeBtnEnter {
+  background-color: $colorGreen;
+  border-color: $colorGreen;
 }
 
 .wrapper {
@@ -421,7 +390,7 @@ $bordRad: 30px;
     grid-column: 2;
     grid-row: 1/3;
 
-    #btnEnterLU {
+    .btnEnterLU {
       background-color: $colorGrey;
       border-color: grey;
       border-width: 1px;
@@ -431,13 +400,13 @@ $bordRad: 30px;
       grid-row: 1;
     }
 
-    #btnEnterLD {
+    .btnEnterLD {
       grid-column: 1;
       grid-row: 2;
       z-index: -5;
     }
 
-    #btnEnterRU {
+    .btnEnterRU {
       background-color: $colorGrey;
       border-color: grey;
       border-width: 1px;
@@ -453,7 +422,7 @@ $bordRad: 30px;
       }
     }
 
-    #btnEnterRD {
+    .btnEnterRD {
       background-color: $colorGrey;
       border-color: grey;
       border-width: 1px;
