--- a/src/css/sponge.css
+++ b/src/css/sponge.css
@@ -1,9 +1,11 @@
 .aquarium {
+  grid-column: 2;
+  grid-row: 2;
   position: relative;
   overflow: hidden;
   width: 800px;
-  height: 500px;
-  margin: auto;
+  height: 400px;
+  margin: 0px auto 0px;
 }
 .aquarium *,
 .aquarium *::before,
