--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,7 +7,8 @@
   margin: 0;
   box-sizing: border-box;
   color: $colorWhite;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", "Times New Roman", Calibri,
+    "Trebuchet MS", sans-serif;
 }
 
 .button {
@@ -639,7 +640,7 @@
   }
 
   p {
-    font-family: "Caveat", cursive;
+    font-family: "Caveat", cursive, "Times New Roman", Times, serif;
     color: $colorGrey;
   }
 }
