--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,8 +7,7 @@
   margin: 0;
   box-sizing: border-box;
   color: $colorWhite;
-  font-family: "Gill Sans", "Gill Sans MT", "Times New Roman", Calibri,
-    "Trebuchet MS", sans-serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .button {
@@ -640,7 +639,6 @@
   }
 
   p {
-    font-family: "Caveat", cursive, "Times New Roman", Times, serif;
     color: $colorGrey;
   }
 }
