--- a/src/css/style.css
+++ b/src/css/style.css
@@ -274,6 +274,9 @@
   width: 514px;
   height: 72px;
 }
+.central-panel p {
+  font-size: 9pt;
+}
 .central-panel .block-3-Tab {
   display: flex;
   flex-direction: row;
@@ -403,9 +406,6 @@
   grid-template-rows: 33px 1fr;
   grid-column: 2;
   grid-row: 1/3;
-}
-.central-panel .btnEnter p {
-  font-size: 9pt;
 }
 .central-panel .btnEnter .btnEnterLU {
   background-color: rgb(82, 82, 82);
@@ -649,7 +649,7 @@
 }
 .note p {
   color: rgb(82, 82, 82);
-  font-size: 9pt;
+  font-size: 10pt;
 }
 
 .one {
