--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,5 @@
 @import "variable";
 @import "mixins";
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap");
 
 * {
   padding: 0;
@@ -587,7 +586,8 @@
   height: 170px;
 
   .mouse-table {
-    background-image: url("../assets/abstract.jpg");
+    background-image: url(../assets/abstract.jpg);
+    background-size: 100% auto;
     border: 2px grey;
     border-style: solid solid none solid;
     border-radius: $bordRad $bordRad 0px 0px;
